# opengrm-ngram

./: AUTHORS  COPYING  Makefile.in  NEWS  README  README.md  configure  configure.ac
src/: Makefile.in
src/include/: Makefile.am  Makefile.in
src/include/ngram/: hist-arc.h  hist-mapper.h  lexicographic-map.h  ngram-absolute.h  ngram-bayes-model-merge.h  ngram-complete.h  ngram-context-merge.h  ngram-context-prune.h  ngram-context.h  ngram-count-merge.h  ngram-count-of-counts.h  ngram-count-prune.h  ngram-count.h  ngram-hist-merge.h  ngram-input.h  ngram-katz.h  ngram-kneser-ney.h  ngram-list-prune.h  ngram-make.h  ngram-marginalize.h  ngram-merge.h  ngram-model-merge.h  ngram-model.h  ngram-mutable-model.h  ngram-output.h  ngram-randgen.h  ngram-relentropy.h  ngram-replace-merge.h  ngram-seymore-shrink.h  ngram-shrink.h  ngram-split.h  ngram-transfer.h  ngram-unsmoothed.h  ngram-witten-bell.h  ngram.h  util.h
src/lib/: Makefile.am  Makefile.in  hist-arc.cc  ngram-absolute.cc  ngram-complete.cc  ngram-context.cc  ngram-count-of-counts.cc  ngram-count-prune.cc  ngram-count.cc  ngram-input.cc  ngram-katz.cc  ngram-kneser-ney.cc  ngram-list-prune.cc  ngram-make.cc  ngram-marginalize.cc  ngram-merge.cc  ngram-model.cc  ngram-mutable-model.cc  ngram-output.cc  ngram-shrink.cc  ngram-split.cc  ngram-transfer.cc  util.cc
src/test/: Makefile.am  Makefile.in  disttestsetup.sh  ngramapply_test.sh  ngramcompile_randgen_far.sh  ngramcount_histograms_test.sh  ngramcount_test.sh  ngramdist_test.sh  ngramdistcount_test.sh  ngramdistmake_test.sh  ngramdistrand.sh  ngramdistshrink_test.sh  ngramdistwittenbell_test.sh  ngramfracdistmake_test.sh  ngramfracdistshrink_test.sh  ngramhisttest.cc  ngraminfo_test.sh  ngrammake_test.sh  ngrammarginalize_test.sh  ngrammerge_test.sh  ngramperplexity_test.sh  ngramprint_test.sh  ngramrand_test.sh  ngramrandgen_test.sh  ngramrandtest.cc  ngramrandtest_seed.sh  ngramshrink_test.sh  ngramsymbols_test.sh
src/test/testdata/: ab.syms  earnest-absolute.mod.txt  earnest-count_prune.pru.txt  earnest-det.cnts.txt  earnest-fst.cnts.txt  earnest-katz.marg.iter2.mod.sym  earnest-katz.marg.iter2.mod.txt  earnest-katz.marg.mod.txt  earnest-kneser_ney.mod.txt  earnest-min.cnts.txt  earnest-relative_entropy.pru.txt  earnest-seymore.pru.txt  earnest-unsmoothed.mod.txt  earnest-witten_bell.mod.txt  earnest.arpa  earnest.cnt.print  earnest.cnt_of_cnts.sym  earnest.cnt_of_cnts.txt  earnest.cnts.txt  earnest.det.txt  earnest.fst.txt  earnest.info  earnest.min.sym  earnest.min.txt  earnest.mod.txt  earnest.mrg.norm.txt  earnest.mrg.smooth.norm.txt  earnest.mrg.smooth.txt  earnest.mrg.txt  earnest.perp  earnest.randgen.apply.FSTtxt.tgz  earnest.randgen.txt  earnest.syms  earnest.txt  fst1.hist.txt  fst2.hist.txt  hist.ref.txt  init.randcorpus.0.mod.txt  init.randcorpus.1.mod.sym  init.randcorpus.1.mod.txt  (+4 more)
