nobase_include_HEADERS = ngram/ngram-count.h ngram/ngram-input.h \
   ngram/ngram-make.h ngram/ngram-merge.h ngram/ngram-count-merge.h \
   ngram/ngram-context-merge.h ngram/ngram-model-merge.h ngram/ngram-model.h \
   ngram/ngram-unsmoothed.h ngram/ngram-mutable-model.h ngram/ngram-output.h \
   ngram/ngram-shrink.h ngram/ngram-kneser-ney.h ngram/ngram-absolute.h \
   ngram/ngram-count-of-counts.h ngram/ngram-katz.h ngram/ngram-witten-bell.h \
   ngram/lexicographic-map.h ngram/ngram-relentropy.h \
   ngram/ngram-seymore-shrink.h ngram/ngram-count-prune.h \
   ngram/ngram-context-prune.h ngram/ngram-randgen.h ngram/ngram-marginalize.h \
   ngram/ngram-context.h ngram/ngram-split.h ngram/ngram.h \
   ngram/ngram-complete.h ngram/ngram-transfer.h
