nobase_include_HEADERS = ngram/hist-arc.h \
                         ngram/hist-mapper.h \
                         ngram/lexicographic-map.h \
                         ngram/ngram.h \
                         ngram/ngram-absolute.h \
                         ngram/ngram-bayes-model-merge.h \
                         ngram/ngram-complete.h \
                         ngram/ngram-context.h \
                         ngram/ngram-context-merge.h \
                         ngram/ngram-context-prune.h \
                         ngram/ngram-count.h \
                         ngram/ngram-count-merge.h \
                         ngram/ngram-count-of-counts.h \
                         ngram/ngram-count-prune.h \
                         ngram/ngram-hist-merge.h \
                         ngram/ngram-input.h \
                         ngram/ngram-katz.h \
                         ngram/ngram-kneser-ney.h \
                         ngram/ngram-list-prune.h \
                         ngram/ngram-make.h \
                         ngram/ngram-marginalize.h \
                         ngram/ngram-merge.h \
                         ngram/ngram-model.h \
                         ngram/ngram-model-merge.h \
                         ngram/ngram-mutable-model.h \
                         ngram/ngram-output.h \
                         ngram/ngram-randgen.h \
                         ngram/ngram-relentropy.h \
                         ngram/ngram-replace-merge.h \
                         ngram/ngram-seymore-shrink.h \
                         ngram/ngram-shrink.h \
                         ngram/ngram-split.h \
                         ngram/ngram-transfer.h \
                         ngram/ngram-unsmoothed.h \
                         ngram/ngram-witten-bell.h \
                         ngram/util.h
